<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Home Screen -->
    <string name="app_name">Bluetooth Controller</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="disconnect">Disconnect</string>

    <!-- Toast Messages -->
    <string name="disconnected">Device Disconnected</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Controller.</string>
    <string name="sensor_not_detected">No sensor available</string>

    <!-- Options Menu -->
    <string name="discoverable">Make discoverable</string>
    <string name="action_settings">Settings</string>
    <string name="view_controllers">View Controllers</string>
    <string name="action_help">Help</string>

    <!-- Settings -->
    <string name="pref_general">General</string>
    <string name="pref_bluetooth_on_startup">Start Bluetooth at Launch</string>
    <string name="pref_bluetooth_on_startup_key">pref_bluetooth_on_startup</string>
    <string name="pref_sending_frequency_key">pref_sending_frequency</string>
    <string name="pref_sending_frequency">Sending Frequency</string>
    <string name="dialog_sending_freq_title">Edit Sending Frequency (ms)</string>
    <string name="dialog_sending_freq_message">Sending Frequency (ms)</string>
    <string name="pref_sending_frequency_default">100</string>
    <string name="pref_sending_frequency_summary">100 ms</string>
    <string name="pref_controllers_subscreen_key">pref_controllers_subscreen</string>
    <string name="pref_controllers_subscreen">Controller Options</string>
    <string name="pref_controllers_list_key">pref_controllers_list</string>
    <string name="pref_controllers_list">Currently Enabled Controllers</string>
    <string name="pref_buttonController_subscreen_key">pref_buttonController_subscreen</string>
    <string name="pref_sliderController_subscreen_key">pref_sliderController_subscreen</string>
    <string name="pref_motionController_subscreen_key">pref_motionController_subscreen</string>
    <string name="pref_button_controller_up_key">pref_button_controller_up</string>
    <string name="pref_button_controller_down_key">pref_button_controller_down</string>
    <string name="pref_button_controller_left_key">pref_button_controller_left</string>
    <string name="pref_button_controller_right_key">pref_button_controller_right</string>
    <string name="pref_button_controller_start_key">pref_button_controller_start</string>
    <string name="pref_button_controller_stop_key">pref_button_controller_stop</string>
    <string name="up_default">1</string>
    <string name="down_default">2</string>
    <string name="left_default">4</string>
    <string name="right_default">8</string>
    <string name="start_default">16</string>
    <string name="stop_default">32</string>
    <string name="pref_button_controller_up_summary">1</string>
    <string name="pref_button_controller_down_summary">2</string>
    <string name="pref_button_controller_left_summary">4</string>
    <string name="pref_button_controller_right_summary">8</string>
    <string name="pref_button_controller_start_summary">16</string>
    <string name="pref_button_controller_stop_summary">32</string>
    <string name="pref_buttonController_optional_1_key">pref_button_controller_optional_1</string>
    <string name="pref_button_controller_optional_1_message_title">Option 1 Button Message</string>
    <string name="pref_button_controller_optional_1_message_key">pref_button_controller_optional_1_message</string>
    <string name="pref_button_controller_optional_1_text_title">Option 1 Button Text</string>
    <string name="pref_button_controller_optional_1_text_key">pref_button_controller_optional_1_text</string>
    <string name="pref_buttonController_optional_2_key">pref_button_controller_optional_2</string>
    <string name="pref_button_controller_optional_2_message_title">Option 2 Button Message</string>
    <string name="pref_button_controller_optional_2_message_key">pref_button_controller_optional_2_message</string>
    <string name="pref_button_controller_optional_2_text_title">Option 2 Button Text</string>
    <string name="pref_button_controller_optional_2_text_key">pref_button_controller_optional_2_text</string>
    <string name="pref_buttonController_optional_3_key">pref_button_controller_optional_3</string>
    <string name="pref_button_controller_optional_3_message_title">Option 3 Button Message</string>
    <string name="pref_button_controller_optional_3_message_key">pref_button_controller_optional_3_message</string>
    <string name="pref_button_controller_optional_3_text_title">Option 3 Button Text</string>
    <string name="pref_button_controller_optional_3_text_key">pref_button_controller_optional_3_text</string>
    <string name="pref_buttonController_optional_4_key">pref_button_controller_optional_4</string>
    <string name="pref_button_controller_optional_4_message_title">Option 4 Button Message</string>
    <string name="pref_button_controller_optional_4_message_key">pref_button_controller_optional_4_message</string>
    <string name="pref_button_controller_optional_4_text_title">Option 4 Button Text</string>
    <string name="pref_button_controller_optional_4_text_key">pref_button_controller_optional_4_text</string>
    <string name="pref_buttonController_optional_5_key">pref_button_controller_optional_5</string>
    <string name="pref_button_controller_optional_5_message_title">Option 5 Button Message</string>
    <string name="pref_button_controller_optional_5_message_key">pref_button_controller_optional_5_message</string>
    <string name="pref_button_controller_optional_5_text_title">Option 5 Button Text</string>
    <string name="pref_button_controller_optional_5_text_key">pref_button_controller_optional_5_text</string>
    <string name="pref_buttonController_optional_6_key">pref_button_controller_optional_6</string>
    <string name="pref_button_controller_optional_6_message_title">Option 6 Button Message</string>
    <string name="pref_button_controller_optional_6_message_key">pref_button_controller_optional_6_message</string>
    <string name="pref_button_controller_optional_6_text_title">Option 6 Button Text</string>
    <string name="pref_button_controller_optional_6_text_key">pref_button_controller_optional_6_text</string>

    <!-- Start Bluetooth -->
    <string name="start_bluetooth">Start Bluetooth</string>
    <string name="connect">Connect a device</string>
    <string name="connection_status">Connection Status</string>
    <string name="bluetooth_not_available">Bluetooth is not available on this device</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">Connected to: </string>
    <string name="title_not_connected">not connected</string>
    <string name="device_list">Choose a Device</string>
    <string name="not_currently_available">Not currently available. Please go back.</string>
    <string name="button_controls_option_button_tl_default">Option 1</string>
    <string name="button_controls_option_button_tc_default">Option 2</string>
    <string name="button_controls_option_button_tr_default">Option 3</string>
    <string name="button_controls_option_button_bl_default">Option 4</string>
    <string name="button_controls_option_button_bc_default">Option 5</string>
    <string name="button_controls_option_button_br_default">Option 6</string>

    <!-- Device List -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Select Controller -->
    <string name="launch_bt_chat">Launch Bluetooth Chat</string>
    <string name="launch_button_controller">Buttons Controller</string>
    <string name="launch_slider_controller">Slider Controller</string>
    <string name="launch_motion_controller">Motion Controller</string>

    <!-- BluetoothChat -->
    <string name="bluetooth_chat">Bluetooth Chat</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_search">Search</string>

    <!-- Button Controller -->
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <!-- Slider Controller & Motion Controller -->
    <string name="turning_slider">Steering</string>
    <string name="acc_slider">Acceleration</string>

    <!-- Miscellaneous -->
    <string name="title_activity_arrow_control">ArrowControl</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_samplefrag">samplefrag</string>
    <string name="title_activity_dummy">DummyActivity</string>

</resources>
