<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfirstapp.app.ArrowControl">


    <Button
        android:id="@+id/up"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_above="@+id/left"
        android:layout_toRightOf="@+id/left"
        android:text="@string/up" />

    <Button
        android:id="@+id/down"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/start"
        android:layout_toLeftOf="@+id/right"
        android:text="@string/down" />

    <Button
        android:id="@+id/left"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/left" />

    <Button
        android:id="@+id/right"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/up"
        android:text="@string/right" />

    <Button
        android:id="@+id/start"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="75dip"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/right"
        android:text="@string/start" />

    <Button
        android:id="@+id/stop"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="75dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start"
        android:layout_alignStart="@+id/start"
        android:layout_alignTop="@+id/right"
        android:text="@string/stop" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:id="@+id/button_controls_option_button_tl"
                android:text="@string/button_controls_option_button_tl_default"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/button_controls_option_button_tc"
                android:text="@string/button_controls_option_button_tc_default"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/button_controls_option_button_tr"
                android:text="@string/button_controls_option_button_tr_default"/>

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:id="@+id/button_controls_option_button_bl"
                android:text="@string/button_controls_option_button_bl_default"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/button_controls_option_button_bc"
                android:text="@string/button_controls_option_button_bc_default"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/button_controls_option_button_br"
                android:text="@string/button_controls_option_button_br_default"/>

        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>
