<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.myfirstapp.app.ArrowControl">


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/up"
        android:id="@+id/up"
        android:layout_above="@+id/left"
        android:layout_toRightOf="@+id/left" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/down"
        android:id="@+id/down"
        android:layout_alignTop="@+id/start"
        android:layout_toLeftOf="@+id/right" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:id="@+id/left"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:id="@+id/right"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/up" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/start"
        android:layout_below="@+id/right"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/stop"
        android:layout_alignTop="@+id/right"
        android:layout_alignLeft="@+id/start"
        android:layout_alignStart="@+id/start" />
</RelativeLayout>
