<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myfirstapp.app.HomeScreen">

    <!-- Settings, should always be in the overflow -->

    <item
        android:id="@+id/view_controllers"
        android:showAsAction="never"
        android:orderInCategory="9999"
        android:title="@string/view_controllers" />

    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:orderInCategory="9999"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_help"
        android:showAsAction="never"
        android:orderInCategory="9999"
        android:title="@string/action_help" />

</menu>
