<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfirstapp.app.HomeScreen">
    >

    <Button
        android:id="@+id/launch_bt_chat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="launch_bt_chat"
        android:text="@string/launch_bt_chat" />


    <Button
        android:id="@+id/launch_button_controller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="launch_button_control"
        android:text="@string/launch_button_controller" />

    <Button
        android:id="@+id/launch_slider_controller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="launch_slider_control"
        android:text="@string/launch_slider_controller" />

    <Button
        android:id="@+id/launch_motion_controller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="launch_motion_control"
        android:text="@string/launch_motion_controller" />

</LinearLayout>
