<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myfirstapp.app.DeviceListFrag">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_paired_devices"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/abc_action_bar_icon_vertical_padding"
                android:background="#666"
                android:paddingLeft="5dp"
                android:text="@string/title_paired_devices"
                android:textColor="#fff"
                android:visibility="gone" />

            <ListView
                android:id="@+id/paired_devices"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:stackFromBottom="true" />

            <TextView
                android:id="@+id/title_new_devices"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#666"
                android:paddingLeft="5dp"
                android:text="@string/title_other_devices"
                android:textColor="#fff"
                android:visibility="gone" />

            <ListView
                android:id="@+id/new_devices"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:stackFromBottom="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_bot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/scan_progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_scan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/button_scan" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
